--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,10 @@
-version: 0.0
-os: linux
-files:
-  - source: /
-    destination: /var/www/html
+version: 0.2
+
+phases:
+  build:
+    commands:
+      - echo "Build started on `date`"
+artifacts:
+  files:
+    - index.html
+    - appspec.yml
